--- a/index.html
+++ b/index.html
@@ -51,8 +51,34 @@
 
         </section>
 
-        <section>
-            <div class="feature-option">
+        <section class="feature-option">
+            <div >
+                <h3 class="feature-head">Features you will love & enjoy</h3>
+                <p class="feature-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="feature-card">
+                    <h5 class="card-tittle">Desktop & Mobile Version</h5>
+                    <p class="card-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h5 class="card-tittle">Drag & Drop Builder</h5>
+                    <p class="card-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h5 class="card-tittle">Awesome Modern Design</h5>
+                    <p class="card-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h5 class="card-tittle">Super Easy to Edit</h5>
+                    <p class="card-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+
+            <div class="sister-img-container">
+                <img src="images/architect.png" alt="">
+                <button class="btn-experience">
+                    <h4 id="amazing-year">10+ Year</h4>
+                    <p id="amazing-experience">Experience</p>
+                </button>
 
             </div>
             
