--- a/index.html
+++ b/index.html
@@ -83,6 +83,42 @@
             </div>
             
         </section>
+
+        <section class="reputation">
+            <h4 class="fact-tittle">Some Facts</h4>
+            <p class="fact-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
+            <div class="achievements">
+                <div class="achievement">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="">
+                        <h2 class="achieve-tittle">54</h2>
+                        <p class="achieve-des">Awards winning</p>
+                    </div>
+                </div>
+                <div class="achievement">
+                    <div>
+                        <img src="images/icons/projects.png" alt="">
+                        <h2 class="achieve-tittle">1454</h2>
+                        <p class="achieve-des">Project Finished</p>
+                    </div>
+                </div>
+                <div class="achievement">
+                    <div>
+                        <img src="images/icons/customers.png" alt="">
+                        <h2 class="achieve-tittle">540</h2>
+                        <p class="achieve-des">Clients Worked</p>
+                    </div>
+                </div>
+                <div class="achievement">
+                    <div>
+                        <img src="images/icons/email.png" alt="">
+                        <h2 class="achieve-tittle">54254</h2>
+                        <p class="achieve-des">Email Send</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
