--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
 
 </head>
-<body class="work-sans-font">
+<body class="work-sans-font mother">
     <header class="bg-light">
         <nav class="nav-cotainer flex">
             <h3 class="company-tittle">G3 Architects</h3>
