--- a/index.html
+++ b/index.html
@@ -119,6 +119,23 @@
                 </div>
             </div>
         </section>
+
+        <section class="sponsor-section">
+            <div class="sponsor-content">
+                <h4 class="spons-tittle">Our Sponsors</h4>
+                <p class="fact-des spons-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="spons-img-container">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+            </div>
+        </section>
     </main>
+    <footer class="bg-light">
+        <small>All rights reserved copyright @2023 startup landing page design</small>
+    </footer>
 </body>
 </html>
